# gebbdoom

./: .gitignore  DOOM.TXT  Dockerfile  NOTES.TXT  NeXT.txt  README.md  TODO.txt  build.go  doom_64_instr.txt  make.sh  mips.txt  reviewers.txt
cover/: cover colored square tilted.psd  cover colored square.psd  cover colored.psd  cover.psd
maps/: simple_room.wad.bak
src/: 486.tex  Terminal Saved Output  acknowledgment.tex  book.tex  bugs.tex  collisions.tex  copyright.tex  cover.tex  cover_back.tex  credit_screen.tex  dave_interview.tex  distribution.tex  dos_extender.tex  dots.tex  dwango.tex  environment.tex  epilogue.tex  erratas.tex  essays.tex  finger.tex  foreword.tex  foreword_ddt.tex  foreword_john_romero.tex  foreword_romero.tex  graph_wad.tex  graph_wad2.tex  hardware_summary.tex  heretic.tex  hexen.tex  ia.tex  internals.tex  introduction.tex  map_benchmark.tex  modding.tex  mystyle.sty  network.tex  next.tex  next_video_system.tex  openglvsdirect3d.tex  palette.tex  (+48 more)
src/code/: D_Display.c  D_ProcessEvents.c  EV_BuildStairs.c  FixedMul.asm  G_Ticker.c  I_FinishUpdate.c  I_InitNetwork.c  I_StartSound.c  I_UpdateBox.c  LongSwap.c  M_DrawMainMenu.c  P_AimLineAttack.c  P_PathTraverse.c  P_RecursiveSound.c  P_Ticker.c  R_DrawColumn.asm  R_DrawMasked.c  R_DrawPlanes.c  R_PointOnSide.c  (+92 more)
tools/: NextStation_benchmarks.txt  demo_map.wad  demo_map.wad.bak  masked_room.wad.bak
tools/wadExplorer/: CMakeLists.txt  Lump.cpp  Lump.h  Map.cpp  Map.h  MapReader.cpp  MapReader.h  SVGRenderer.cpp  SVGRenderer.h  Things.cpp  Things.h  WadArchive.cpp  WadArchive.h  main.cpp
(+203 files in other folders)
